--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.16.5
 yarn_mappings=1.16.5+build.10
 loader_version=0.13.3
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=1.0
 maven_group=moe.caramel
 archives_base_name=fix-mc248936
 
