--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,12 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=1.16.5
 yarn_mappings=1.16.5+build.10
 loader_version=0.13.3
+
+#Fabric api
+fabric_version=0.42.0+1.16
+
 # Mod Properties
-mod_version=1.0
+mod_version=2.0-SNAPSHOT
 maven_group=moe.caramel
 archives_base_name=fix-mc248936
 
