--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.13.3
 fabric_version=0.42.0+1.16
 
 # Mod Properties
-mod_version=2.0-SNAPSHOT
+mod_version=2.0
 maven_group=moe.caramel
 archives_base_name=fix-mc248936
 
