--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.10
+minecraft_version=1.19.1
+yarn_mappings=1.19.1
 loader_version=0.13.3
 
 #Fabric api
-fabric_version=0.42.0+1.16
+fabric_version=0.58.5+1.19.1
 
 # Mod Properties
-mod_version=2.0.1
+mod_version=2.1.0
 maven_group=moe.caramel
 archives_base_name=fix-mc248936
-
