support modmenu gui setting

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,9 @@ loader_version=0.14.9
 #Fabric api
 fabric_version=0.58.0+1.19
 
+#Mod Menu
+mod-menu_version=4.0.0
+
 # Mod Properties
 mod_version=3.0.0
 maven_group=moe.caramel
