--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19
-loader_version=0.14.9
+minecraft_version=1.19.3
+loader_version=0.14.11
 
 #Fabric api
-fabric_version=0.58.0+1.19
+fabric_version=0.68.1+1.19.3
 
 #Mod Menu
-mod-menu_version=4.0.0
+mod-menu_version=5.0.0-alpha.4
 
 # Mod Properties
-mod_version=3.0.0
+mod_version=3.1.0-SNAPSHOT
 maven_group=moe.caramel
 archives_base_name=chameleon
