--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,6 @@ fabric_version=0.68.1+1.19.3
 mod-menu_version=5.0.0-alpha.4
 
 # Mod Properties
-mod_version=3.1.0-SNAPSHOT
+mod_version=3.1.0
 maven_group=moe.caramel
 archives_base_name=chameleon
