--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ loader_version=0.14.11
 fabric_version=0.68.1+1.19.3
 
 #Mod Menu
-mod-menu_version=5.0.0-alpha.4
+mod-menu_version=5.0.1
 
 # Mod Properties
 mod_version=3.1.0
