--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.3
-loader_version=0.14.11
+minecraft_version=1.19.4-pre2
+loader_version=0.14.14
 
 #Fabric api
-fabric_version=0.68.1+1.19.3
+fabric_version=0.75.1+1.19.4
 
 #Mod Menu
-mod-menu_version=5.0.1
+mod-menu_version=6.1.0-beta.3
 
 # Mod Properties
-mod_version=3.1.0
+mod_version=3.1.1
 maven_group=moe.caramel
 archives_base_name=chameleon
