--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.4-pre2
-loader_version=0.14.14
+minecraft_version=1.19.4
+loader_version=0.14.17
 
 #Fabric api
-fabric_version=0.75.1+1.19.4
+fabric_version=0.75.3+1.19.4
 
 #Mod Menu
-mod-menu_version=6.1.0-beta.3
+mod-menu_version=6.1.0-rc.1
 
 # Mod Properties
 mod_version=3.2.0
