--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.4
-loader_version=0.14.17
+minecraft_version=23w16a
+loader_version=0.14.19
 
 #Fabric api
-fabric_version=0.75.3+1.19.4
+fabric_version=0.78.1+1.20
 
 #Mod Menu
-mod-menu_version=6.1.0-rc.1
+mod-menu_version=7.0.0-beta.1
 
 # Mod Properties
-mod_version=3.2.0
+mod_version=4.0.0-SNAPSHOT
 maven_group=moe.caramel
 archives_base_name=chameleon
