--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=23w17a
-loader_version=0.14.19
+minecraft_version=1.20
+loader_version=0.14.21
 
 #Fabric api
-fabric_version=0.79.2+1.20
+fabric_version=0.83.0+1.20
 
 #Mod Menu
-mod-menu_version=7.0.0-beta.1
+mod-menu_version=7.0.0
 
 # Mod Properties
-mod_version=4.0.0-SNAPSHOT
+mod_version=4.0.0
 maven_group=moe.caramel
 archives_base_name=chameleon
