--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20
-loader_version=0.14.21
+minecraft_version=1.20.2
+loader_version=0.14.22
 
 #Fabric api
-fabric_version=0.83.0+1.20
+fabric_version=0.89.1+1.20.2
 
 #Mod Menu
-mod-menu_version=7.0.0
+mod-menu_version=8.0.0-beta.2
 
 # Mod Properties
-mod_version=4.0.0
+mod_version=4.1.0
 maven_group=moe.caramel
 archives_base_name=chameleon
