--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.2
-loader_version=0.14.22
+minecraft_version=1.20.3
+loader_version=0.15.0
 
 #Fabric api
-fabric_version=0.89.1+1.20.2
+fabric_version=0.91.1+1.20.3
 
 #Mod Menu
-mod-menu_version=8.0.0-beta.2
+mod-menu_version=9.0.0-pre.1
 
 # Mod Properties
-mod_version=4.1.0
+mod_version=4.2.0
 maven_group=moe.caramel
 archives_base_name=chameleon
