--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.3
-loader_version=0.15.0
+minecraft_version=1.20.6
+loader_version=0.15.10
 
 #Fabric api
-fabric_version=0.91.1+1.20.3
+fabric_version=0.97.8+1.20.6
 
 #Mod Menu
-mod-menu_version=9.0.0-pre.1
+mod-menu_version=10.0.0-beta.1
 
 # Mod Properties
-mod_version=4.2.0
+mod_version=4.3.0
 maven_group=moe.caramel
 archives_base_name=chameleon
