--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.20.6
-loader_version=0.15.10
+minecraft_version=1.21
+loader_version=0.15.11
 
 #Fabric api
-fabric_version=0.97.8+1.20.6
+fabric_version=0.100.4+1.21
 
 #Mod Menu
-mod-menu_version=10.0.0-beta.1
+mod-menu_version=11.0.1
 
 # Mod Properties
-mod_version=4.3.0
+mod_version=4.4.0
 maven_group=moe.caramel
 archives_base_name=chameleon
