--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.2
-loader_version=0.16.7
+# check these on https://fabricmc.net/develop/
+minecraft_version=1.21.6
+loader_version=0.16.14
 
 #Fabric api
-fabric_version=0.106.1+1.21.2
+fabric_version=0.127.1+1.21.6
 
 #Mod Menu
-mod-menu_version=12.0.0-beta.1
+mod-menu_version=15.0.0-beta.3
 
 # Mod Properties
-mod_version=4.5.0
+mod_version=4.6.0
 maven_group=moe.caramel
 archives_base_name=chameleon
